--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,11 @@ header p span { font-size: 0.8em; font-weight: normal;}
   box-shadow: 2px 2px 1px grey;
 }
 
+.grow { transition: all .2s ease-in-out; }
+.grow:hover { -webkit-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+        transform: scale(1.1);; }
+
 footer {
   padding: 0 0.5em;
   border-top: 1px solid #ccc;
